# Currency-Note-Recognition

./: README.md  pyproject.toml  requirements.txt
notebooks/: currency_note_demo.ipynb  train_currency_model.ipynb
src/: app.py  inference.py  main.py  model.py  preprocessing.py
src/currency_note_recognition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
